--- a/src/components/WordGroup/style.css
+++ b/src/components/WordGroup/style.css
@@ -5,10 +5,11 @@
   flex-direction: row;
   justify-content: space-around;
   position: relative;
-  bottom: 28px;
-  padding-bottom: 200px;
-  padding-top: 200px;
+  top: calc(84px - 1.8em);
+  padding-bottom: 3em;
+  padding-top: 1em;
   transform: scale(0);
-  overflow-x: hidden;
+  transform-origin: center 1.8em;
+  font-size: 1.2em;
 
 }
